--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -16,7 +16,7 @@
     <link href="/static/app/admin/js/iCheck/skins/square/red.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/blue.css" rel="stylesheet">
     <link href="/static/app/admin/css/toastr.min.css" rel="stylesheet">
-
+    <!--<link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">-->
     <!--dashboard calendar-->
     <link href="/static/app/admin/css/clndr.css" rel="stylesheet">
 
@@ -131,7 +131,7 @@
                     </ul>
                 </li>
 
-                <li><a href="fontawesome.html"><i class="fa fa-tasks"></i> <span>Fontawesome</span></a></li>
+                <li><a href="{:url('admin/BusInfo/comment')}"><i class="fa fa-tasks"></i> <span>用户评论</span></a></li>
 
                 <li class="menu-list"><a href=""><i class="fa fa-envelope"></i> <span>售后服务</span></a>
                     <ul class="sub-menu-list">
