--- a/mobile/index/view/buy/personal1.html
+++ b/mobile/index/view/buy/personal1.html
@@ -55,9 +55,9 @@
               {/if}
               <div class="pet_grzx_num">
                 <span><i><a href="{:url('index/Personal/order')}">待付款</a></i></span>
-                <span><i><a href="{:url('index/Personal/order')}">待发货{$wnu}</a></i></span>
-                <span><i><a href="{:url('index/Personal/order')}">待收货{$snu}</a></i></span>
-                <span><i><a href="{:url('index/Personal/order')}">已完成{$dnu}</a></i></span>
+                <span><i><a href="{:url('index/Personal/order')}">待发货({$wnu})</a></i></span>
+                <span><i><a href="{:url('index/Personal/order')}">待收货({$snu})</a></i></span>
+                <span><i><a href="{:url('index/Personal/order')}">已完成({$dnu})</a></i></span>
               </div>
           </div>
           <div class="pet_grzx_list">
@@ -72,7 +72,7 @@
                               <a href="{:url('index/Personal/order')}" >我的订单</a>
                           </li>
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
-                              <a href="{:url('index/Personal/coupon')}">我的优惠券{$mnu}</a>
+                              <a href="{:url('index/Personal/coupon')}">我的优惠券({$mnu})</a>
                               <button  class="am-btn am-btn-xs am-radius am-btn-primary" data-am-modal="{target: '#doc-modal-2', closeViaDimmer: 0, width: 400, height: 225}">积分兑换</button>
                           </li>
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
