--- a/application/index/view/index/personal.html
+++ b/application/index/view/index/personal.html
@@ -470,7 +470,9 @@
                                   <td style="text-align: center">{$v['o_num']}</td>
                                   <td style="text-align: center">{$v['o_total']}</td>
                                   <td style="text-align: center">
-                                      <button class="btn btn-info btn-sm show01">查看</button>
+                                      <button class="btn btn-info btn-sm show01" oid="{$v['o_id']}">查看</button>
+                                      <button class="btn btn-info btn-sm comment" oid="{$v['o_id']}" data-toggle="modal" data-target="#myCommentModal">评价</button>
+                                      <!--<a href="{:url('index/Comment/create',['id'=>$v['o_id']])}">评价</a>-->
                                       <button class="btn btn-danger btn-sm delOrder" oid="{$v['o_id']}">删除</button>
                                   </td>
                               </tr>
@@ -498,9 +500,6 @@
                                   </li>
                                   <li>{$v['o_time']}</li>
                               </ul>
-                              <p>
-                                  评论...........
-                              </p>
                           </div>
                           {/volist}
                           <!--</div>-->
@@ -552,9 +551,6 @@
                                   </li>
                                   <li>{$v['o_time']}</li>
                               </ul>
-                              <p>
-                                  评论...........
-                              </p>
                           </div>
                           {/volist}
                           <!--</div>-->
@@ -606,9 +602,6 @@
                                   </li>
                                   <li>{$v['o_time']}</li>
                               </ul>
-                              <p>
-                                  评论...........
-                              </p>
                           </div>
                           {/volist}
                       </div>
@@ -819,6 +812,41 @@
     <!--Back to Top Wrap Start-->
 
   </div>
+
+<!--评价的模态框 -->
+<div class="modal fade" id="myCommentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="gname1"></h4>
+            </div>
+            <form action="{:url('index/Comment/save')}" method="post" enctype="multipart/form-data">
+            <div class="modal-body">
+                <input type="hidden" name='bid' id="bid" value="">
+                <input type="hidden" name='gid' id="gid" value="">
+                <input type="hidden" name='cid' id="cid" value="">
+                <input type="hidden" name='uid' id="uid" value="">
+                <input type="hidden" name='oid' id="oid" value="">
+                <input type="hidden" name='gname' id="gname" value="">
+                <textarea name="content"  cols="90" rows="3" placeholder="请输入评论内容,长度限制在140个字符以内" maxlength="140" noresize></textarea>
+                <br>
+                <br>
+                评分:　
+                <input type="radio" name='score' value="5" checked>非常好∩_∩
+                　<input type="radio" name='score' value="4">很好^_^
+                　<input type="radio" name='score' value="3">好:-D
+                　<input type="radio" name='score' value="2">一般-_-
+                　<input type="radio" name='score' value="1">差╯﹏╰
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">提交评价</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 {/block}
   <!--gt Wrapper End-->
 {block name="myjs"}
@@ -834,6 +862,40 @@
   <script src="/static/app/index/js/main.js"></script>
 
 <script>
+
+    //商品评价
+    $('.comment').click(function(){
+        //订单的id
+        var id = $(this).attr('oid');
+        //console.log(id);
+        commentAjax(id);
+    });
+    function commentAjax(id){
+        $.ajax({
+            type:'get',
+            url:'commentcre/'+id,
+            dataType:'json',
+            success:function(data){
+                if(data.status){
+                    $('#gname1').html('商品名称:'+data.gname);
+                    $('#gname').attr('value',data.gname);
+                    $('#gid').attr('value',data.gid);
+                    $('#cid').attr('value',data.cid);
+                    $('#uid').attr('value',data.uid);
+                    $('#bid').attr('value',data.bid);
+                    $('#oid').attr('value',data.oid);
+                }else{
+                    alert('获取数据失败,请重试');
+                }
+            },
+            error:function(){
+                alert('请求失败');
+            }
+        });
+    }
+
+
+
     //      information
     $('#showInformation').click(function(){
         $('#information').css('display','block');
@@ -1081,6 +1143,7 @@
 
     $('#show01').click(function(){
         $('#show11,#show12').slideToggle();
+
     });
     $('#show02').click(function(){
         $('#show21,#show22').slideToggle();
@@ -1233,6 +1296,8 @@
             return true;
         }
     }
+
+
 </script>
 <!--Custom JavaScript-->
 <script src="/static/app/index/js/custom.js"></script>
