--- a/mobile/index/view/index/detail.html
+++ b/mobile/index/view/index/detail.html
@@ -52,159 +52,57 @@
                 <!--<a href="{:url('index/Cart/index',['gid'=>$data['gid'],'cid'=>$data['cid']])}">加入购物车</a>-->
                 <button type="button" class="am-btn am-btn-danger am-round" id="cart">加入购物车</button>
             </div>
-            <div class="pet_article_dowload">
-                <div class="pet_article_dowload_title">关于Amaze UI</div>
-                <div class="pet_article_dowload_content"><div class="pet_article_dowload_triangle"></div>
-                    <div class="pet_article_dowload_ico"><img src="/static/mobile/img/footdon.png" alt=""></div>
-                    <div class="pet_article_dowload_content_font">
-                        Amaze UI 以移动优先（Mobile first）为理念，从小屏逐步扩展到大屏，最终实现所有屏幕适配，适应移动互联潮流。
-                    </div>
-                    <div class="pet_article_dowload_all">
-                        <a href="###" class="pet_article_dowload_Az am-icon-apple"> App store</a>
-                        <a href="###" class="pet_article_dowload_Pg am-icon-android"> Android</a>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="pet_comment_list">
-            <div class="pet_comment_list_wap"><div class="pet_comment_list_title">精彩评论</div>
+            <div class="pet_comment_list_wap"><div class="pet_comment_list_title">精彩评论({:count($comment)})</div>
 
                 <div data-am-widget="tabs" class="am-tabs am-tabs-default pet_comment_list_tab" >
-                    <ul class="am-tabs-nav am-cf pet_comment_list_title_tab">
-                        <li class="am-active"><a href="[data-tab-panel-0]">人气</a></li>
-                        <li class=""><a href="[data-tab-panel-1]">最新</a></li>
-                        <li class=""><a href="[data-tab-panel-2]">最早</a></li>
-                    </ul>
+                    <!--<ul class="am-tabs-nav am-cf pet_comment_list_title_tab">-->
+                        <!--<li class="am-active"><a href="[data-tab-panel-0]">人气好评</a></li>-->
+                        <!--<li class=""><a href="[data-tab-panel-1]">中评</a></li>-->
+                        <!--<li class=""><a href="[data-tab-panel-2]">差评</a></li>-->
+                    <!--</ul>-->
+
+                    {if condition="!empty($comment)"}
                     <div class="am-tabs-bd pet_pl_list">
                         <div data-tab-panel-0 class="am-tab-panel am-active">
+                            {volist name='comment' id='cv'}
                             <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a1.png" alt=""></div>
+                                <div class="pet_comment_list_block_l"><img src="/uploads/headPhoto/{$cv['ud_photo']}" alt=""></div>
                                 <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">Amaze</div>
-                                    <div class="pet_comment_list_block_r_text">那时候有多好，任雨打湿裙角。忍不住哼起，心爱的旋律。绿油油的树叶，自由地在说笑。燕子忙归巢，风铃在舞蹈。</div>
+                                    <div class="pet_comment_list_block_r_info">{$cv['u_username']}</div>
+                                    <div class="pet_comment_list_block_r_text">{$cv['c_text']}</div>
                                     <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">10分钟前</div>
+                                        <div class="pet_comment_list_bottom_info_l">
+                                            {switch name=$cv['c_score']}
+                                              {case value="1"}<span class="am-icon-star"></span>{/case}
+                                              {case value="2"}<span class="am-icon-star"></span><span class="am-icon-star"></span>{/case}
+                                              {case value="3"}<span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span>{/case}
+                                              {case value="4"}<span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span>{/case}
+                                              {case value="5"}<span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span><span class="am-icon-star"></span>{/case}
+                                              {default /}default
+                                              {/switch}
+                                        </div>
                                         <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
+                                            <span>{$cv['c_time']}</span></div>
                                     </div>
+                                    {if condition="!empty($cv['c_content'])"}
+                                    <div class="pet_comment_list_block_r_bottom">
+                                        <div class="pet_comment_list_bottom_info_l">
+                                            <span><b>商家回应:　</b>{$cv['c_content']}</span>
+                                        </div>
+                                        <div class="pet_comment_list_bottom_info_r">
+                                            <span><b>回复时间:　</b>{$cv['c_atime']}</span></div>
+                                    </div>
+                                    {/if}
                                 </div>
                             </div>
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a2.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">一如既往</div>
-                                    <div class="pet_comment_list_block_r_text"><span>@Drary</span>没有老友你的陪伴，日子真是漫长与你重逢之时，我会敞开心扉倾诉所有。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">15分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a3.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">AllThe</div>
-                                    <div class="pet_comment_list_block_r_text">表紙の裏に移らないよに あけた一枚目のページの裏に透けた文字めくろうとして 指がとまって</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">30分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a4.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">Drary</div>
-                                    <div class="pet_comment_list_block_r_text">无论历经怎样的艰难坎坷，总有你相伴陪我度过。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">1小时前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div data-tab-panel-1 class="am-tab-panel ">
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a2.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">一如既往</div>
-                                    <div class="pet_comment_list_block_r_text"><span>@Drary</span>没有老友你的陪伴，日子真是漫长与你重逢之时，我会敞开心扉倾诉所有。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">15分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a3.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">AllThe</div>
-                                    <div class="pet_comment_list_block_r_text">表紙の裏に移らないよに あけた一枚目のページの裏に透けた文字めくろうとして 指がとまって</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">30分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a1.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">Amaze</div>
-                                    <div class="pet_comment_list_block_r_text">那时候有多好，任雨打湿裙角。忍不住哼起，心爱的旋律。绿油油的树叶，自由地在说笑。燕子忙归巢，风铃在舞蹈。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">10分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-
-
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a4.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">Drary</div>
-                                    <div class="pet_comment_list_block_r_text">无论历经怎样的艰难坎坷，总有你相伴陪我度过。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">1小时前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div data-tab-panel-2 class="am-tab-panel ">
-                            <div class="pet_comment_list_block">
-                                <div class="pet_comment_list_block_l"><img src="/static/mobile/img/a1.png" alt=""></div>
-                                <div class="pet_comment_list_block_r">
-                                    <div class="pet_comment_list_block_r_info">Amaze</div>
-                                    <div class="pet_comment_list_block_r_text">那时候有多好，任雨打湿裙角。忍不住哼起，心爱的旋律。绿油油的树叶，自由地在说笑。燕子忙归巢，风铃在舞蹈。</div>
-                                    <div class="pet_comment_list_block_r_bottom">
-                                        <div class="pet_comment_list_bottom_info_l">10分钟前</div>
-                                        <div class="pet_comment_list_bottom_info_r">
-                                            <span><i class="iconfont">&#xe631;</i>5 </span>
-                                            <span> 回复</span></div>
-                                    </div>
-                                </div>
-                            </div>
-
-
-
                         </div>
                     </div>
+                    {/volist}
+                    {else/}
+                    <h2 style="text-align: center">此商品下暂无用户评论哦~~</h2>
+                    {/if}
                 </div>
             </div>
         </div>
