--- a/mobile/index/view/index/index.html
+++ b/mobile/index/view/index/index.html
@@ -193,7 +193,7 @@
 
 <div class="top-call-to-action full-bottom">
 
-    <a href="tel:+1 234 567 890"><i class="fa fa-lock"></i>登录</a>
+    <a href="{:url('/showLogin')}"><i class="fa fa-lock"></i>登录</a>
 
     <a class="" href="{:url('/listshow',['cid'=>'4'])}"><i class="fa fa-pie-chart"></i>酒店</a>
 
