--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -61,7 +61,12 @@
     <!--饼状图-->
     <!--<link href="/static/app/admin/css/default.css" rel="stylesheet">-->
     <link href="/static/app/admin/css/reset_count.css" rel="stylesheet">
-
+    <!--总计-->
+    <link rel='stylesheet prefetch' href='/static/app/admin/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="/static/app/admin/css/style.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="/static/app/admin/css/normalize.css" media="screen" type="text/css" />
+    <!--<link rel="stylesheet" href="/static/app/admin/css/bootstrap.css" media="screen" type="text/css" />-->
+    <!--<link rel="stylesheet" href="/static/app/admin/css/bootstrap.min.css" media="screen" type="text/css" />-->
 
 
 
@@ -198,10 +203,10 @@
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-bar-chart-o"></i> <span>网站统计</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="flot_chart.html"> Flot Charts</a></li>
-                        <li><a href="morris.html"> Morris Charts</a></li>
+                        <!--<li><a href="flot_chart.html"> Flot Charts</a></li>-->
+                        <!--<li><a href="morris.html"> Morris Charts</a></li>-->
                         <li><a href="{:url('/chartjs')}"> 统计</a></li>
-                        <li><a href="c3chart.html"> C3 Charts</a></li>
+                        <!--<li><a href="c3chart.html"> C3 Charts</a></li>-->
                     </ul>
                 </li>
                 <li class="menu-list"><a href="#"><i class="fa fa-th-list"></i> <span>Data Tables</span></a>
